# financial-copilot-platform

./: .gitignore  README.md  pyproject.toml
.omm/external-integrations/: concern.md  constraint.md  context.md  description.md  diagram.mmd  meta.yaml  note.md
.omm/overall-architecture/: concern.md  constraint.md  context.md  description.md  diagram.mmd  meta.yaml  note.md  todo.md
.omm/request-lifecycle/: concern.md  constraint.md  context.md  description.md  diagram.mmd  meta.yaml  note.md
agents/api/: app.py
agents/eval/: cli.py
agents/flow/: complex_query.py  dispatcher.py  sql_react.py  state.py
agents/model/: format_tool.py
agents/rag/: retriever.py
agents/runtime/: __init__.py  agentscope_adapter.py  agentscope_runtime.py  result.py  shadow_benchmark.py  skill_contracts.py  skill_registry.py  skill_runtime.py  tool_catalog.py  tool_contracts.py  (+1 more)
docs/: agentscope_runtime_research_plan.md  current_architecture.md  iterations.md  skill_based_data_agent_design.md  tool_catalog_reference.md
tests/: test_agentscope_adapter.py  test_agentscope_api.py  test_agentscope_runtime.py  test_api.py  test_complex_query.py  test_dispatcher.py  test_eval_cli.py  test_final_api.py  test_imports.py  test_metric_registry.py  test_record_readme_demos.py  test_runtime_tool_catalog.py  test_seed_intent_rules.py  test_shadow_benchmark.py  test_skill_registry.py  test_skill_runtime.py  test_sql_react.py  test_sql_shape.py  test_sql_validation.py  test_static_approval_quality_gate.py  test_tool_exposure_policy.py  test_tracing.py  test_verified_query_repository.py
(+161 files in other folders)
