[project]
name = "financial-copilot-platform"
version = "0.1.0"
description = "Financial Copilot Platform built with LangChain and LangGraph"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
    "langgraph>=0.2",
    "langgraph-checkpoint-redis>=0.1",
    "langchain-milvus>=0.1",
    "pymilvus>=2.4",
    "langchain-elasticsearch>=0.3",
    "elasticsearch>=8.12",
    "langchain-text-splitters>=0.3",
    "pypdf>=4.0",
    "docx2txt>=0.8",
    "tiktoken>=0.7",
    "sentence-transformers>=3.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "redis>=5.0",
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sse-starlette>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "mysql-replication>=1.0",
    "agentscope>=1.0.20",
    "sqlglot>=25.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27"]
tracing = ["cozeloop>=0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
